...
            job = "External Code Reviewer at Dicoding Indonesia",
            other = "Reviewer Kelas Memulai Pemrograman dengan Kotlin, Software Engineering Student, Dicoding Graduate, iOS Developer",
            photo = "https://dicoding-web-img.sgp1.digitaloceanspaces.com/small/avatar/dos:43399cabdbd096e6b91ecf4716c0396a20230423155708.png"
        ),
        KontributorReviewer(
            id = 28,
            name = "Bervianto Leo Pratama",
            job = "External Code Reviewer at Dicoding Indonesia",
            other = "Reviewer Kelas Memulai Pemrograman dengan Kotlin, Microsoft Certified : DevOps Engineer Expert, Microsoft Certified : Azure Solutions Architect Expert, Microsoft Certified : Azure Developer Associate, Microsoft Certified : Indentity and Access Administrator Associate, Microsoft Certified : Azure Database Administrator Associate, Mirosoft Certified, Azure Cosmos DB Developer Sp
            photo = "https://dicoding-web-img.sgp1.digitaloceanspaces.com/small/avatar/dos:e4ff008605ee483095c00e982e5c9c5d20230614120720.png"
        ),
        KontributorReviewer(
            id = 29,
...
